--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,46 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
+    /* border: 1px solid black; */
 }
+
+#grid-main {
+    height: auto;
+    width: 100%;
+    display: grid;
+    grid-template: 33% 67% / 25% 45% 30%;
+}
+
+.dashboard {
+    color: white;
+    background-color: #0077ff;
+    grid-row: 1 / 3;
+
+}
+
+.dashboard-grid {
+    display: grid;
+    grid-template-rows: ;
+}
+
+.header {
+    background-color: white;
+    grid-column: 2 / 4;
+}
+
+.header-grid {
+    display: grid;
+    grid-template: 1fr 1fr / 2fr 1fr;
+}
+
+.header-login,
+.header-name {
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 4fr;
+}
+
+.content,
+.sidebar {
+    background-color: #ddf3fd;
+}
+
