--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,17 @@
     /* border: 1px solid black; */
 }
 
+html, body {
+    width: 90%;
+    margin: auto;
+    background-color: black;
+}
+
 #grid-main {
-    height: auto;
-    width: 100%;
+    height: 100vh;
     display: grid;
-    grid-template: 33% 67% / 25% 45% 30%;
+    grid-template-rows: 20% 80%;
+    grid-template-columns: 1fr 3fr 1fr;
 }
 
 .dashboard {
@@ -29,9 +35,11 @@
 .header {
     background-color: white;
     grid-column: 2 / 4;
+    box-shadow: 0 1px 4px;
 }
 
 .header-grid {
+    height: 100%;
     display: grid;
     grid-template: 1fr 1fr / 2fr 1fr;
     align-items: center;
@@ -62,12 +70,13 @@
 
 img {
     grid-row: 1 / 3;
+
 }
 
 input {
     border-radius: 6px;
     padding: 2px 6px;
-    background-color: #c2cfd47e;
+    background-color: #c2cfd4;
     border: none;
 }
 
@@ -77,6 +86,6 @@ input[id='search'] {
 
 .content,
 .sidebar {
-    background-color: #c2cfd47e;
+    background-color: #c2cfd4;
 }
 
